# NRes

./: Cargo.toml
src/: cli.rs  device_info.rs  device_name_utils.rs  device_utils.rs  display_change.rs  main.rs
