[package]
name = "NRes"
version = "1.2.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
ahash = "0.8.3"
clap = { version = "4.3.10", features = ["derive"] }
derive_more = "0.99.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi"
]
